Add Print Shop page with cart and order submission
- Create shop.html with product grid, category filters, and cart panel
- Add CartManager to app.js for localStorage-based cart persistence
- Add shop-data.js with 8 products, 6 categories, 9 color options
- Add shop.css with responsive styles matching LayerBEE design
- Add shop.js with secure DOM-based UI (no innerHTML for XSS safety)
- Update navigation across all pages to include Shop link
- Fix tutor FAB to use LayerBEE logo image on all module pages

w4ester & ai orchestration

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <li><a href="#modules" class="nav-link">Learn</a></li>
                     <li><a href="modules/troubleshoot.html" class="nav-link">Fix Problems</a></li>
                     <li><a href="modules/business.html" class="nav-link">Start Selling</a></li>
+                    <li><a href="modules/shop.html" class="nav-link">Shop</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
