--- a/modules/troubleshoot.html
+++ b/modules/troubleshoot.html
@@ -33,6 +33,7 @@
                     <li><a href="../index.html#modules" class="nav-link">Learn</a></li>
                     <li><a href="troubleshoot.html" class="nav-link active">Fix Problems</a></li>
                     <li><a href="business.html" class="nav-link">Start Selling</a></li>
+                    <li><a href="shop.html" class="nav-link">Shop</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -653,7 +654,7 @@
 
     <!-- Floating Tutor Button -->
     <button id="tutor-fab" class="tutor-fab" aria-label="Open LayerBEE tutor">
-        <span class="fab-icon">🐝</span>
+        <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="fab-icon-img" aria-hidden="true">
         <span class="fab-text">Ask LayerBEE</span>
     </button>
 
