--- a/modules/basics.html
+++ b/modules/basics.html
@@ -29,6 +29,7 @@
                     <li><a href="../index.html#modules" class="nav-link active">Learn</a></li>
                     <li><a href="troubleshoot.html" class="nav-link">Fix Problems</a></li>
                     <li><a href="business.html" class="nav-link">Start Selling</a></li>
+                    <li><a href="shop.html" class="nav-link">Shop</a></li>
                 </ul>
             </nav>
             <div class="header-actions">
@@ -499,7 +500,7 @@
     </div>
 
     <button id="tutor-fab" class="tutor-fab" aria-label="Open LayerBEE tutor">
-        <span class="fab-icon">🐝</span>
+        <img src="../images/LayerBEE-chatbot-logo.png" alt="" class="fab-icon-img" aria-hidden="true">
         <span class="fab-text">Ask LayerBEE</span>
     </button>
 
